--- a/SeleniumTests/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests/SeleniumTests.csproj
@@ -51,8 +51,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FullTest.cs" />
+    <Compile Include="Lecture.cs" />
     <Compile Include="SeleniumTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Training.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
