--- a/SeleniumTests/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests/SeleniumTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="FullTest.cs" />
     <Compile Include="Lecture.cs" />
+    <Compile Include="SeleniumTestBase.cs" />
     <Compile Include="SeleniumTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Training.cs" />
