--- a/SeleniumTests/SeleniumTests/SeleniumTests.csproj
+++ b/SeleniumTests/SeleniumTests/SeleniumTests.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllBooksPage.cs" />
+    <Compile Include="CourierDeliveryPage.cs" />
     <Compile Include="FullTest.cs" />
     <Compile Include="Lecture.cs" />
     <Compile Include="Pages.cs" />
